--- a/.student_bashrc
+++ b/.student_bashrc
@@ -9,3 +9,8 @@ ln -s /data/waymo/segment-12200383401366682847_2552_140_2572_140_with_camera_lab
 ln -s /data/waymo/segment-10072231702153043603_5725_000_5745_000_with_camera_labels.tfrecord /home/workspace/data/waymo/test/segment-10072231702153043603_5725_000_5745_000_with_camera_labels.tfrecord
 
 ln -s /data/waymo/segment-12012663867578114640_820_000_840_000_with_camera_labels.tfrecord /home/workspace/data/waymo/test/segment-12012663867578114640_820_000_840_000_with_camera_labels.tfrecord
+
+# git setup
+git config --global user.email "machuiwen@gmail.com"
+git config --global user.name "Chuiwen Ma"
+git config --global push.default simple
