--- a/.student_bashrc
+++ b/.student_bashrc
@@ -10,6 +10,8 @@ ln -s /data/waymo/segment-10072231702153043603_5725_000_5745_000_with_camera_lab
 
 ln -s /data/waymo/segment-12012663867578114640_820_000_840_000_with_camera_labels.tfrecord /home/workspace/data/waymo/test/segment-12012663867578114640_820_000_840_000_with_camera_labels.tfrecord
 
+alias tensorboard='python /data/virtual_envs/sdc-c1-gpu-augment/lib/python3.7/site-packages/tensorboard/main.py'
+
 # git setup
 git config --global user.email "machuiwen@gmail.com"
 git config --global user.name "Chuiwen Ma"
